# RocketPy

./: .README.md.swp  .coderabbit  .coveragerc  .flake8  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  SolidMotor_class_usage.ipynb  TODO.md  cleaned_data.csv  docker-compose.yml  getting_started After Nozzle.ipynb  getting_started At Nose Length.ipynb  getting_started Before Nose.ipynb  getting_started CM.ipynb  getting_started Dispersion.ipynb  getting_started Fins OutOfRocket.ipynb  getting_started Fins.ipynb  getting_started Nose.ipynb  getting_started Nozzle.ipynb  getting_started Tail OutOfRocket.ipynb  getting_started Tail.ipynb  getting_started copy.ipynb  getting_started.ipynb  getting_startedTeste.ipynb  ineartia_product.txt  jules_handoff.sh  monte_carlo_test.inputs.txt  (+26 more)
.agents/: AGENTS.md
.claude/: settings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  auto-assign.yml  clear-local-branches.ps1  copilot-instructions.md  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: rocketpy-reviewer.agent.md
.github/instructions/: simulation-safety.instructions.md  sphinx-docs.instructions.md  tests-python.instructions.md
.github/workflows/: auti-assign-projects  auto-assign-projects  auto-assign.yml  changelog.yml  codecov.yml  lint_black.yaml  linters.yml  publish-to-pypi.yml  pytest_and_black_lint.yaml  setup-python.sh  sync-upstream.yml  test-pytest-slow.yaml  test_pytest.yaml  upload-to-codecov.yml
.travisci/: config.yml
Dispersão/: Europa_Dispersion_Analysis.ipynb  SisRec.py
Dispersão/Data/: EmpSimHibNHNE final LASC.csv  Europa_IREC_Power_off_drag.csv  Europa_IREC_Power_on_drag.csv  NACA0012_completa_RE_160000.csv
ICA/: NACA0012-radians.txt  monte_carlo_class_example  monte_carlo_class_example.inputs.txt  monte_carlo_class_example.outputs.txt  monte_carlo_class_usage.ipynb
archive/: output_1701450534.3793411.json
data/Midnight_Sun/: powerOffDragCurve.csv  powerOnDragCurve.csv
data/SEBLM/: drag.csv  pressurantMassFiltered.csv  test124_Pressurant_PT.csv  test124_Propane_Volume.csv  test124_Thrust_Curve.csv
data/airfoils/: e473-10e6-degrees.csv
data/astg/: DragCoeffOR_on.csv  gnss_halcyon.csv
data/berkeley/: ExampleTankGasMassData.csv  ExampleTankLiquidMassData.csv  Test135GasMass.csv  loxUllage.csv
data/caldene/: drag.csv
data/calisto/: CD Test.CSV  air_brakes_cd.csv  airbrakes_cd.csv  powerOffDragCurve.csv  rocket.stl
data/dispersion csv files/: Valetudo.csv  juninho.csv
data/euporia/: euporiaDrag.csv  euporiaDrag2.csv  euporiaDrag3.csv  euporiaDrag4.csv  euporiaIDrag.csv  euporiaIDragOff.csv  euporiaIDragOn.csv  euporiaIIIdrag.csv  euporiaILowDragOff.csv  euporiaILowDragOn.csv
data/jiboia/: jiboia.eng  thrustCurve.csv  thrustCurve2.csv
data/juno3/: cots_GNSS.csv  cots_altimeter.csv
data/motors/: Cesaroni_7450M2505-P.csv  Cesaroni_7450M2505-P.eng  Cesaroni_98_3G_white_thunder.csv  Cesaroni_J360.eng  Cesaroni_M1300.eng  Cesaroni_M1400.eng  Cesaroni_M1540.eng  Cesaroni_M1670.eng  Cesaroni_M3100.eng  Hypertek_835CC125J-K240.eng  Hypertek_J115.eng  STES_L1882.eng
data/polito/: drag_coefficient_power_off.csv  drag_coefficient_power_on.csv
data/valetudo/: cd_openRocket.csv
data/weather/: EuroC_export_env_analysis.json  EuroC_pressure_levels_reanalysis_2002_2010.nc  data.csv  euroc_2022_all_windows.nc  euroc_2023_all_windows.nc  euroc_2023_fixed.nc  fetchAlcantara.py  fetchAmericas.py  fetchCLBI.py  fetchRioSaoPaulo.py  fetchSpacePort.py  fetchSpaceportAmerica.py  hedy_euroc_2025_weather_data.nc  ndrt_2020_weather_data_ERA5_new.nc  spaceport_america_single_level_reanalysis_2002_2021.nc  spaceport_america_surface_reanalysis_2015_2021.nc
docker/: .dockerignore  docker-compose.yml
docs/: RocketPy To-Dos  classes.rst  conf.py  index.rst  requirements.in  requirements.txt  rocketpy.py  rocketpyBeta.py  sampleDispersionConfiguration.py  uml_class_diagrams.txt
docs/classes/: Environment.rst  Flight.rst  Function.rst  Rocket.rst  SolidMotor.rst
docs/development/: build_docs.rst  conflicts.rst  docker.rst  first_pr.rst  github_hacakthon.rst  github_hackathon.rst  github_tutorial.md  index.rst  pro_tips.rst  rocketpy_as_developer.rst  rocketpy_tutorial.rst  setting_up.rst  style_guide.rst  testing.rst
docs/examples/: 3_DOF_TRIAL.ipynb  3_dof_trial_sim.ipynb  SEB_liquid_motor.ipynb  Team26_RocketPy_v1_0_0.ipynb  andromeda_flight_sim.ipynb  astra_flight_sim.ipynb  bella_lui_flight_sim.ipynb  bme_flight_sim.ipynb  camoes_flight_sim.ipynb  cavour_flight_sim.ipynb  defiance_flight_sim.ipynb  index.rst  (+17 more)
nbks/: Calisto.ipynb  Euporia.ipynb  Getting Started & Examples.ipynb  Getting Started - Examples.ipynb  SisRec.py  rocketpy.py  rocketpyAlpha.py  rocketpyBeta.py
rocketpy/: AeroSurface.py  AeroSurfaces.py  AeroSurfacesData.py  Analysis.py  Components.py  Controller.py  Dispersion.py  Environment.py  EnvironmentAnalysis.py  EnvironmentData.py  Flight.py  FlightData.py  Function.py  Motor.py  Parachute.py  ParachuteData.py  Rocket.py  RocketData.py  SolidMotor.py  SolidMotorData.py  __init__.py  _encoders.py  _logging.py  enums.py  exceptions.py  generate_nb_from_ork.py  supplement.py  tools.py  units.py  utilities.py  utils.py
rocketpyalpha/: Environment.py  Flight.py  Rocket.py  SolidMotor.py  __init__.py
tests/: conftest.py  test_dispersion.py  test_environment.py  test_environment_analysis.py  test_environment_anaysis.py  test_flight.py  test_flight_data_importer.py  test_flight_plots.py  test_function.py  test_genericmotor.py  test_hybridmotor.py  test_liquidmotor.py  test_monte_carlo.py  test_monte_carlo_export.py  test_plots.py  test_rocket.py  test_sensor.py  test_sensors.py  test_solidmotor.py  test_supplement.py  test_tank.py  test_tank_geometry.py  test_tools_matrix.py  test_tools_vector.py  test_utilities.py  testing.ipynb
(+815 files in other folders)
